test/char/invalid_use.lox
'a' + 'b'; // error: Binary operands must both be numbers or both be strings
